[package]
name = 'nft360-runtime'
edition = '2018'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"
hex-literal = { version = "0.3.1", optional = true }
log = { version = "0.4.14", default-features = false }

# primitives
sp-authority-discovery = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/authority-discovery" }
sp-consensus-babe = { version = "0.9.0", default-features = false, path = "../../substrate/primitives/consensus/babe" }
sp-block-builder = { version = "3.0.0", path = "../../substrate/primitives/block-builder", default-features = false }
sp-inherents = { version = "3.0.0", path = "../../substrate/primitives/inherents", default-features = false }
node-primitives = { package = "nft360-primitives", version = "0.1.0", default-features = false, path = "../primitives" }
sp-offchain = { version = "3.0.0", path = "../../substrate/primitives/offchain", default-features = false }
sp-core = { version = "3.0.0", path = "../../substrate/primitives/core", default-features = false }
sp-std = { version = "3.0.0", path = "../../substrate/primitives/std", default-features = false }
sp-api = { version = "3.0.0", path = "../../substrate/primitives/api", default-features = false }
sp-runtime = { version = "3.0.0", path = "../../substrate/primitives/runtime", default-features = false }
sp-staking = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/staking" }
sp-keyring = { version = "3.0.0", optional = true, path = "../../substrate/primitives/keyring" }
sp-session = { version = "3.0.0", path = "../../substrate/primitives/session", default-features = false }
sp-transaction-pool = { version = "3.0.0", path = "../../substrate/primitives/transaction-pool", default-features = false }
sp-version = { version = "3.0.0", path = "../../substrate/primitives/version", default-features = false }
sp-npos-elections = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/npos-elections" }

# frame dependencies
frame-executive = { version = "3.0.0", path = "../../substrate/frame/executive", default-features = false }
frame-benchmarking = { version = "3.1.0", path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
frame-support = { version = "3.0.0", path = "../../substrate/frame/support", default-features = false }
frame-system = { version = "3.0.0", path = "../../substrate/frame/system", default-features = false }
frame-system-benchmarking = { version = "3.0.0", path = "../../substrate/frame/system/benchmarking", default-features = false, optional = true }
frame-election-provider-support = { version = "3.0.0", path = "../../substrate/frame/election-provider-support", default-features = false }
frame-system-rpc-runtime-api = { version = "3.0.0", path = "../../substrate/frame/system/rpc/runtime-api", default-features = false }
frame-try-runtime = { version = "0.9.0", default-features = false, path = "../../substrate/frame/try-runtime", optional = true }
pallet-authority-discovery = { version = "3.0.0", default-features = false, path = "../../substrate/frame/authority-discovery" }
pallet-authorship = { version = "3.0.0", default-features = false, path = "../../substrate/frame/authorship" }
pallet-babe = { version = "3.0.0", default-features = false, path = "../../substrate/frame/babe" }
pallet-balances = { version = "3.0.0", path = "../../substrate/frame/balances", default-features = false }
pallet-bounties = { version = "3.0.0", path = "../../substrate/frame/bounties", default-features = false }
pallet-collective = { version = "3.0.0", default-features = false, path = "../../substrate/frame/collective" }
pallet-democracy = { version = "3.0.0", default-features = false, path = "../../substrate/frame/democracy" }
pallet-election-provider-multi-phase = { version = "3.0.0", default-features = false, path = "../../substrate/frame/election-provider-multi-phase" }
pallet-elections-phragmen = { version = "4.0.0", default-features = false, path = "../../substrate/frame/elections-phragmen" }
pallet-grandpa = { version = "3.1.0", path = "../../substrate/frame/grandpa", default-features = false }
pallet-identity = { version = "3.0.0", default-features = false, path = "../../substrate/frame/identity" }
pallet-im-online = { version = "3.0.0", default-features = false, path = "../../substrate/frame/im-online" }
pallet-indices = { version = "3.0.0", default-features = false, path = "../../substrate/frame/indices" }
pallet-membership = { version = "3.0.0", default-features = false, path = "../../substrate/frame/membership" }
pallet-multisig = { version = "3.0.0", path = "../../substrate/frame/multisig", default-features = false }
pallet-offences = { version = "3.0.0", default-features = false, path = "../../substrate/frame/offences" }
pallet-offences-benchmarking = { version = "3.0.0", path = "../../substrate/frame/offences/benchmarking", default-features = false, optional = true }
pallet-proxy = { version = "3.0.0", path = "../../substrate/frame/proxy", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", path = "../../substrate/frame/randomness-collective-flip", default-features = false }
pallet-session = { version = "3.0.0", path = "../../substrate/frame/session", default-features = false }
pallet-session-benchmarking = { version = "3.0.0", path = "../../substrate/frame/session/benchmarking", default-features = false, optional = true }
pallet-staking = { version = "3.0.0", path = "../../substrate/frame/staking", default-features = false }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false, path = "../../substrate/frame/staking/reward-curve" }
pallet-scheduler = { version = "3.0.0", default-features = false, path = "../../substrate/frame/scheduler" }
pallet-sudo = { version = "3.0.0", path = "../../substrate/frame/sudo", default-features = false }
pallet-timestamp = { version = "3.0.0", path = "../../substrate/frame/timestamp", default-features = false }
pallet-tips = { version = "3.0.0", path = "../../substrate/frame/tips", default-features = false }
pallet-treasury = { version = "3.0.0", default-features = false, path = "../../substrate/frame/treasury" }
pallet-utility = { version = "3.0.0", path = "../../substrate/frame/utility", default-features = false }
pallet-transaction-payment = { version = "3.0.0", path = "../../substrate/frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", path = "../../substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }
pallet-transaction-storage = { version = "3.0.0", path = "../../substrate/frame/transaction-storage", default-features = false  }
pallet-vesting = { version = "3.0.0", path = "../../substrate/frame/vesting", default-features = false }

max-encoded-len = { version = "3.0.0", default-features = false, path = "../../substrate/max-encoded-len", features = [ "derive" ] }

# node pallets
pallet-nft = { version = "0.1.0", path = "../../pallets/nft", default-features = false }
pallet-nft-order = { version = "0.1.0", path = "../../pallets/nft-order", default-features = false }
pallet-storage = { version = "0.1.0", path = "../../pallets/storage", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", path = "../../substrate/utils/wasm-builder" }
[dev-dependencies]
sp-io = { version = "3.0.0", path = "../../substrate/primitives/io" }

[features]
default = ["std"]
with-tracing = [ "frame-executive/with-tracing" ]
std = [
	"sp-authority-discovery/std",

	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
    "pallet-balances/std",
    "pallet-bounties/std",
    "sp-block-builder/std",
    "codec/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "sp-inherents/std",
    "pallet-membership/std",
    "pallet-multisig/std",
    "pallet-identity/std",
    "pallet-scheduler/std",
	"node-primitives/std",
    "sp-offchain/std",
    "pallet-offences/std",
    "pallet-proxy/std",
    "sp-core/std",
    "pallet-randomness-collective-flip/std",
    "sp-std/std",
	"pallet-session/std",
    "sp-api/std",
    "sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
    "pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-election-provider-multi-phase/std",
    "pallet-timestamp/std",
    "pallet-tips/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
	"pallet-transaction-storage/std",
	"pallet-treasury/std",
    "sp-transaction-pool/std",
    "pallet-utility/std",
    "sp-version/std",
	"pallet-vesting/std",
	"log/std",
	"frame-try-runtime/std",
	"sp-npos-elections/std",
	"max-encoded-len/std",
    "pallet-nft/std",
    "pallet-nft-order/std",
    "pallet-storage/std",
]

runtime-benchmarks = [
    "hex-literal",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-tips/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
    "pallet-nft/runtime-benchmarks",
    "pallet-nft-order/runtime-benchmarks",
    "pallet-storage/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",

	"pallet-nft/try-runtime",
	"pallet-nft-order/try-runtime",
	"pallet-storage/try-runtime",
]