[package]
name = "deer-runtime"
version = "0.2.2"
edition = "2018"
build = "build.rs"
license = "Apache 2.0"
homepage = "https://deernetwork.org"
repository = "https://github.com/DeerNetwork/deer-node/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
static_assertions = "1.1.0"
hex-literal = { version = "0.3.1", optional = true }
log = { version = "0.4.14", default-features = false }

# primitives
sp-authority-discovery = { default-features = false, path = "../../substrate/primitives/authority-discovery" }
sp-consensus-babe = { default-features = false, path = "../../substrate/primitives/consensus/babe" }
sp-block-builder = { path = "../../substrate/primitives/block-builder", default-features = false }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false }
node-primitives = { package = "deer-primitives", default-features = false, path = "../primitives" }
sp-offchain = { path = "../../substrate/primitives/offchain", default-features = false }
sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-std = { path = "../../substrate/primitives/std", default-features = false }
sp-api = { path = "../../substrate/primitives/api", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-staking = { default-features = false, path = "../../substrate/primitives/staking" }
sp-keyring = { optional = true, path = "../../substrate/primitives/keyring" }
sp-session = { path = "../../substrate/primitives/session", default-features = false }
sp-transaction-pool = { path = "../../substrate/primitives/transaction-pool", default-features = false }
sp-version = { path = "../../substrate/primitives/version", default-features = false }
sp-npos-elections = { default-features = false, path = "../../substrate/primitives/npos-elections" }

# frame dependencies
frame-executive = { path = "../../substrate/frame/executive", default-features = false }
frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
frame-support = { path = "../../substrate/frame/support", default-features = false }
frame-system = { path = "../../substrate/frame/system", default-features = false }
frame-system-benchmarking = { path = "../../substrate/frame/system/benchmarking", default-features = false, optional = true }
frame-election-provider-support = { path = "../../substrate/frame/election-provider-support", default-features = false }
frame-system-rpc-runtime-api = { path = "../../substrate/frame/system/rpc/runtime-api", default-features = false }
frame-try-runtime = { default-features = false, path = "../../substrate/frame/try-runtime", optional = true }
pallet-authority-discovery = { default-features = false, path = "../../substrate/frame/authority-discovery" }
pallet-authorship = { default-features = false, path = "../../substrate/frame/authorship" }
pallet-babe = { default-features = false, path = "../../substrate/frame/babe" }
pallet-balances = { path = "../../substrate/frame/balances", default-features = false }
pallet-bounties = { path = "../../substrate/frame/bounties", default-features = false }
pallet-collective = { default-features = false, path = "../../substrate/frame/collective" }
pallet-democracy = { default-features = false, path = "../../substrate/frame/democracy" }
pallet-election-provider-multi-phase = { default-features = false, path = "../../substrate/frame/election-provider-multi-phase" }
pallet-elections-phragmen = { default-features = false, path = "../../substrate/frame/elections-phragmen" }
pallet-grandpa = { path = "../../substrate/frame/grandpa", default-features = false }
pallet-identity = { default-features = false, path = "../../substrate/frame/identity" }
pallet-im-online = { default-features = false, path = "../../substrate/frame/im-online" }
pallet-indices = { default-features = false, path = "../../substrate/frame/indices" }
pallet-membership = { default-features = false, path = "../../substrate/frame/membership" }
pallet-multisig = { path = "../../substrate/frame/multisig", default-features = false }
pallet-offences = { default-features = false, path = "../../substrate/frame/offences" }
pallet-offences-benchmarking = { path = "../../substrate/frame/offences/benchmarking", default-features = false, optional = true }
pallet-proxy = { path = "../../substrate/frame/proxy", default-features = false }
pallet-randomness-collective-flip = { path = "../../substrate/frame/randomness-collective-flip", default-features = false }
pallet-session = { path = "../../substrate/frame/session", default-features = false }
pallet-session-benchmarking = { path = "../../substrate/frame/session/benchmarking", default-features = false, optional = true }
pallet-staking = { path = "../../substrate/frame/staking", default-features = false }
pallet-staking-reward-curve = { default-features = false, path = "../../substrate/frame/staking/reward-curve" }
pallet-scheduler = { default-features = false, path = "../../substrate/frame/scheduler" }
pallet-sudo = { path = "../../substrate/frame/sudo", default-features = false }
pallet-timestamp = { path = "../../substrate/frame/timestamp", default-features = false }
pallet-tips = { path = "../../substrate/frame/tips", default-features = false }
pallet-treasury = { default-features = false, path = "../../substrate/frame/treasury" }
pallet-utility = { path = "../../substrate/frame/utility", default-features = false }
pallet-transaction-payment = { path = "../../substrate/frame/transaction-payment", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { path = "../../substrate/frame/transaction-payment/rpc/runtime-api", default-features = false }
pallet-transaction-storage = { path = "../../substrate/frame/transaction-storage", default-features = false  }
pallet-vesting = { path = "../../substrate/frame/vesting", default-features = false }

# node pallets
pallet-nft = { path = "../../pallets/nft", default-features = false }
pallet-nft-order = { path = "../../pallets/nft-order", default-features = false }
pallet-nft-auction = { path = "../../pallets/nft-auction", default-features = false }
pallet-storage = { path = "../../pallets/storage", default-features = false }

[build-dependencies]
substrate-wasm-builder = { path = "../../substrate/utils/wasm-builder" }
[dev-dependencies]
sp-io = { path = "../../substrate/primitives/io" }

[features]
default = ["std"]
with-tracing = [ "frame-executive/with-tracing" ]
std = [
	"sp-authority-discovery/std",

	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
    "pallet-balances/std",
    "pallet-bounties/std",
    "sp-block-builder/std",
    "codec/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "sp-inherents/std",
    "pallet-membership/std",
    "pallet-multisig/std",
    "pallet-identity/std",
    "pallet-scheduler/std",
	"node-primitives/std",
    "sp-offchain/std",
    "pallet-offences/std",
    "pallet-proxy/std",
    "sp-core/std",
    "pallet-randomness-collective-flip/std",
    "sp-std/std",
	"pallet-session/std",
    "sp-api/std",
    "sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
    "pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-election-provider-multi-phase/std",
    "pallet-timestamp/std",
    "pallet-tips/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
	"pallet-transaction-storage/std",
	"pallet-treasury/std",
    "sp-transaction-pool/std",
    "pallet-utility/std",
    "sp-version/std",
	"pallet-vesting/std",
	"log/std",
	"frame-try-runtime/std",
	"sp-npos-elections/std",
    "pallet-nft/std",
    "pallet-nft-order/std",
    "pallet-nft-auction/std",
    "pallet-storage/std",
]

runtime-benchmarks = [
    "hex-literal",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-tips/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
    "pallet-nft/runtime-benchmarks",
    "pallet-nft-order/runtime-benchmarks",
    "pallet-nft-auction/runtime-benchmarks",
    "pallet-storage/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",

	"pallet-nft/try-runtime",
	"pallet-nft-order/try-runtime",
	"pallet-nft-auction/try-runtime",
	"pallet-storage/try-runtime",
]