[package]
name = "pallet-nft-order"
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = '2.0.0', package = 'parity-scale-codec', features = ['derive'], default-features = false }
sp-std = { version = '3.0.0', path = '../../substrate/primitives/std', default-features = false }
sp-core = { version = '3.0.0', path = '../../substrate/primitives/core', default-features = false }
sp-runtime = { version = '3.0.0', path = '../../substrate/primitives/runtime', default-features = false }
frame-benchmarking = { version = '3.1.0', path = '../../substrate/frame/benchmarking', default-features = false, optional = true }
frame-support = { version = '3.0.0', path = '../../substrate/frame/support', default-features = false }
frame-system = { version = '3.0.0', path = '../../substrate/frame/system', default-features = false }
max-encoded-len = { version = "3.0.0", path = '../../substrate/max-encoded-len', default-features = false, features = [ "derive" ] }

pallet-nft = { version = '0.1.0', path = '../nft', default-features = false }

[dev-dependencies]
sp-std = { version = '3.0.0', path = '../../substrate/primitives/std' }
sp-io = { version = '3.0.0', path = '../../substrate/primitives/io' }
sp-runtime = { version = '3.0.0', path = '../../substrate/primitives/runtime' }
pallet-balances = { version = '3.0.0', path = '../../substrate/frame/balances' }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-nft/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-nft/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
