[package]
name = "pallet-nft"
version = "0.1.0"
edition = "2018"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/std" }
sp-core = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/core" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/runtime" }
frame-support = { version = "3.0.0", default-features = false, path = "../../substrate/frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system" }
frame-benchmarking = { version = '3.1.0', path = '../../substrate/frame/benchmarking', default-features = false, optional = true }

[dev-dependencies]
sp-std = { version = "3.0.0", path = "../../substrate/primitives/std" }
sp-core = { version = "3.0.0", path = "../../substrate/primitives/core" }
sp-io = { version = "3.0.0", path = "../../substrate/primitives/io" }
pallet-balances = { version = "3.0.0", path = "../../substrate/frame/balances" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
