[package]
name = "pallet-storage"
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/std" }
sp-core = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/core" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../substrate/primitives/runtime" }
frame-support = { version = "3.0.0", default-features = false, path = "../../substrate/frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../../substrate/frame/system" }
frame-benchmarking = { version = '3.1.0', path = '../../substrate/frame/benchmarking', default-features = false, optional = true }
log = { version = "0.4.14", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
webpki = { path = "../../vendors/webpki", default-features = false }
p256 = { version = "0.9.0", default-features = false, features = ["ecdsa"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }

[dev-dependencies]
sp-std = { version = "3.0.0", path = "../../substrate/primitives/std" }
sp-core = { version = "3.0.0", path = "../../substrate/primitives/core" }
sp-io = { version = "3.0.0", path = "../../substrate/primitives/io" }
pallet-balances = { version = "3.0.0", path = "../../substrate/frame/balances" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
