[package]
name = "pallet-storage"
version = "0.2.2"
edition = "2018"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
sp-std = { default-features = false, path = "../../substrate/primitives/std" }
sp-core = { default-features = false, path = "../../substrate/primitives/core" }
sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
frame-support = { default-features = false, path = "../../substrate/frame/support" }
frame-system = { default-features = false, path = "../../substrate/frame/system" }
frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
log = { version = "0.4.14", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
webpki = { path = "../../vendors/webpki", default-features = false }
p256 = { version = "0.9.0", default-features = false, features = ["ecdsa"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.3.1", optional = true }

[dev-dependencies]
hex-literal = "0.3.1"
sp-std = { path = "../../substrate/primitives/std" }
sp-core = { path = "../../substrate/primitives/core" }
sp-io = { path = "../../substrate/primitives/io" }
pallet-balances = { path = "../../substrate/frame/balances" }
pallet-timestamp = { path = "../../substrate/frame/timestamp" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex-literal",
]
try-runtime = ["frame-support/try-runtime"]
