[package]
name = "pallet-storage"
version = "0.4.0"
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
p256 = { version = "0.10.1", default-features = false, features = ["ecdsa"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.3.4", optional = true }
sp-std = { default-features = false, path = "../../substrate/primitives/std" }
sp-io = { default-features = false, path = "../../substrate/primitives/io" }
sp-core = { default-features = false, path = "../../substrate/primitives/core" }
sp-runtime = { default-features = false, path = "../../substrate/primitives/runtime" }
frame-support = { default-features = false, path = "../../substrate/frame/support" }
frame-system = { default-features = false, path = "../../substrate/frame/system" }
frame-benchmarking = { path = "../../substrate/frame/benchmarking", default-features = false, optional = true }
webpki = { path = "../../vendors/webpki", default-features = false }
runtime-api = { package = "pallet-storage-rpc-runtime-api", path = "./rpc/runtime-api", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
hex = { version = "0.4" }
sp-std = { path = "../../substrate/primitives/std" }
sp-core = { path = "../../substrate/primitives/core" }
pallet-balances = { path = "../../substrate/frame/balances" }
pallet-timestamp = { path = "../../substrate/frame/timestamp" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"runtime-api/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"hex-literal",
]
try-runtime = ["frame-support/try-runtime"]
