[package]
name = 'pallet-template'
edition = '2018'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { version = '2.0.0', package = 'parity-scale-codec', features = ['derive'], default-features = false }
frame-benchmarking = { version = '3.1.0', path = '../../substrate/frame/benchmarking', default-features = false, optional = true }
frame-support = { version = '3.0.0', path = '../../substrate/frame/support', default-features = false }
frame-system = { version = '3.0.0', path = '../../substrate/frame/system', default-features = false }

[dev-dependencies]
serde = { version = '1.0.119' }
sp-core = { version = '3.0.0', path = '../../substrate/primitives/core', default-features = false }
sp-io = { version = '3.0.0', path = '../../substrate/primitives/io', default-features = false }
sp-runtime = { version = '3.0.0', path = '../../substrate/primitives/runtime', default-features = false }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
