[package]
name = "pallet-nft-rpc"
version = "0.4.0"
edition = "2018"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"

pallet-nft-rpc-runtime-api = { path = "./runtime-api" }

sp-api = { path = "../../../substrate/primitives/api" }
sp-rpc = { path = "../../../substrate/primitives/rpc" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }
sp-blockchain = {  path = "../../../substrate/primitives/blockchain" }