[package]
name = "pallet-storage-rpc"
version = "0.4.0"
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

pallet-storage-rpc-runtime-api = { path = "./runtime-api" }

sp-api = { path = "../../../substrate/primitives/api" }
sp-rpc = { path = "../../../substrate/primitives/rpc" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }
sp-blockchain = {  path = "../../../substrate/primitives/blockchain" }