[package]
name = "pallet-storage-rpc-runtime-api"
version = "0.4.0"
edition = "2018"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
sp-api = { path = "../../../../substrate/primitives/api", default-features = false }
sp-std = { path = "../../../../substrate/primitives/std", default-features = false  }
sp-core = { path = "../../../../substrate/primitives/core", default-features = false  }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
]
